--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/pizza.html/">BBQ Chicken Pizza Recipe</a>
-</body>
+    <a href="./recipes/pizza.html">BBQ Chicken Pizza Recipe</a>
+  </body>
 </html>
